2006-09-04  Ruben Vermeersch  <ruben@savanne.be>

	* src/Banshee.Plugins/Audioscrobbler/Engine.cs:
	* src/Banshee.Plugins/Audioscrobbler/Queue.cs: Only run the state machine
	when a track is ready for submit. Removes a useless idle loop and thus
	reduces cpu usage.

2006-09-04  Ruben Vermeersch  <ruben@savanne.be>

	* src/PlaylistModel.cs: Only call QueueSync when it's needed (rather than
	every 300ms).

2006-09-03  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: 
	* src/Banshee.Base/ActionManager.cs:
	* data/UIManagerLayout.xml: Added 'stop when finished' 

2006-09-02  Aaron Bockover  <abock@gnome.org>

	* banshee.pc.in: Replaced entagged-sharp with taglib-sharp (plugins
	will build again)

	* src/Banshee.Base/Gui/TrackEditor.cs: Minor fixes

2006-09-02  Patrick van Staveren  <trick@cvs.gnome.org>

	* src/Banshee.Dap/Mtp/MtpDap.cs: Removed Wav as a valid filetype, as
	for some reason some songs would not get transcoded on sync and send as
	Wavs rather than mp3.

2006-09-01  Aaron Bockover  <abock@gnome.org>

	* data/banshee-dialogs.glade: Renamed a widget

	* src/Banshee.Base/Gui/TrackEditor.cs: Implemented EnterNextTitle

2006-09-01  Aaron Bockover  <abock@gnome.org>

	* taglib-sharp: Updated with latest fixes

2006-08-28  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Gui/ConfirmShutdownDialog.cs: New dialog that is shown
	on shutdown if there are IInstanceCriticalJobs in the scheduler

	* src/Banshee.Base/Banshee.Kernel/IInstanceCriticalJob.cs: New

	* src/Banshee.Base/Gui/ErrorListDialog.cs: Added expander

	* src/Banshee.Base/Banshee.Kernel/Scheduler.cs: Scheduler is now 
	eventful and queryable 

	* src/Banshee.Base/Banshee.Kernel/IntervalHeap.cs: Minor API fix

	* data/banshee-dialogs.glade: Added expander to ErrorListDialog

	* src/PlayerInterface.cs: Connect to Globals.ShutdownRequested, perform
	user interface shutdown sequence when event is raised

	* src/Banshee.Base/Globals.cs: Added ShutdownRequested event support