@@ -369,6 +369,10 @@ namespace Banshee.Sources
             get { return order; }
         }
  
+        public virtual bool HasEmphasis {
+            get { return false; }
+        }
+
         private bool can_rename = true;
         public bool CanRename {
             get { return ReflectionUtil.IsVirtualMethodImplemented(GetType(), "UpdateName") && can_rename; }
